# Motor-de-Consolida-o-Cambial-

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DECISOES.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/skills/: README.md
data/: exposicoes.json
frontend/: Dockerfile  app.js  index.html  styles.css
src/motor_cambial/: composition_root.py  config.py
src/motor_cambial/adapters/outbound/: http.py
src/motor_cambial/application/use_cases/: consolidar_exposicoes.py  reprocessar_por_data.py
src/motor_cambial/domain/: decimal_utils.py  enums.py  errors.py  models.py  resultado.py  resultado_consolidacao.py
src/motor_cambial/domain/rules/: alertas.py  divergencia.py  fallback_data.py  idempotencia.py  selecao_taxa.py
src/motor_cambial/domain/services/: consolidador.py  conversor.py
src/motor_cambial/ports/: cotacao_provider.py
tests/integration/: test_api_e2e.py  test_apis_reais.py  test_cli_e2e.py  test_persistencia_mysql.py
tests/unit/: test_composition_root.py  test_config.py
tests/unit/adapters/: test_http.py
tests/unit/adapters/cache/: test_cache_provider.py
tests/unit/adapters/frankfurter/: test_client.py  test_normalizer.py
tests/unit/adapters/ptax/: test_client.py  test_normalizer.py
tests/unit/domain/: test_alertas.py  test_cotacao_normalizada.py  test_decimal_utils.py  test_divergencia.py  test_enums.py  test_errors.py  test_exposicao.py  test_fallback_data.py  test_idempotencia.py  test_resultado.py  test_resultado_consolidacao.py
tests/unit/ports/: test_cotacao_provider.py
(+23 files in other folders)
