[project]
name = "motor-cambial"
version = "0.1.0"
description = "Motor de Consolidação Cambial para Tesouraria (VTEX) — consolida exposições cambiais em BRL a partir de PTAX e Frankfurter."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q -m 'not integration'"
markers = [
    "integration: testes que batem nas APIs reais (rede); opt-in via -m integration",
]
